05_service-mesh/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    app: front-end
  name: front-end
spec:
  type: NodePort
  ports:
  - name: "http"
    port: 8079
    targetPort: 8079
    protocol: TCP
  selector:
    app: front-end
status:
  loadBalancer: {}
