05_service-mesh/jaeger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: istio-system
spec:
  ports:
  - name: port-2
    nodePort: 32737
    port: 16686
    protocol: TCP
    targetPort: 16686
  selector:
    app: jaeger
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
